alteração na data

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -52,5 +53,7 @@ body{
     bottom: 0px;
 }
 h1{
-    color: #fff;
+    color: #363636;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
